0022752: Fix compilation on Unix with FreeImage and GL2PS support

Added missed includes config.h