src/Image/Image_PixMap.cxx
@@ -17,6 +17,9 @@
 // purpose or non-infringement. Please see the License for the specific terms
 // and conditions governing the rights and limitations under the License.
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
 
 #ifdef HAVE_FREEIMAGE
   #include <FreeImagePlus.h>
