src/OpenGl/OpenGl_Display_1.cxx
@@ -28,6 +28,10 @@
 #include <OpenGl_PrinterContext.hxx>
 #include <OpenGl_AspectText.hxx>
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
 #ifdef HAVE_GL2PS
 #include <gl2ps.h>
 #endif
