src/OpenGl/OpenGl_Workspace_5.cxx
@@ -27,6 +27,10 @@
 #include <OpenGl_AspectMarker.hxx>
 #include <OpenGl_AspectText.hxx>
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
 /* OCC22218 NOTE: project dependency on gl2ps is specified by macro */
 #ifdef HAVE_GL2PS
   #include <gl2ps.h>
